# ociupdate

./: Cargo.toml  oci.lock.schema.json  readme.md  rust-toolchain.toml
.github/: renovate-config.json  renovate.json
src/: main.rs  repo.rs  version.rs
