[package]
name = "ociupdate"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/theoremlp/ociupdate"
rust-version = "1.80"

[dependencies]
aws-config = "1.4.0"
aws-sdk-ecr = "1.25.0"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
regex = "1.10.4"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
]
# Publish jobs to run in CI
pr-run-mode = "plan"

[workspace.metadata.dist.github-custom-runners]
aarch64-unknown-linux-gnu = "gh-linux-arm64-2cpu"
